--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 odml- Metadata handling for Matlab
 -------------------------------------------------------------------------
-Copyright (C) 2009-2011 Jan Grewe & Jan Benda
+Copyright (C) 2009-2011 Jan Grewe & Jan Benda, 2015 Florent Jaillet
 www.g-node.org/odml
-Sources can be downloaded from github (www.github.com): git@github.com:G-Node/matlab-odml.git
+Sources can be downloaded from github (www.github.com): git@github.com:fstj/matlab-odml.git
 
-odml is simple hierarchical format for storing and transfering metadata
+odml is a simple hierarchical format for storing and transfering metadata
 about experimental data.
 This library contains the Java implementation of it which can easily be used 
 with Matlab.
@@ -27,16 +27,13 @@ Installation/building
 -------------------------------------------------------------------------
 Place all files in a directory and include it in the Matlab search path.
 
-Run the odmlConfig.m script that will add all necessary libraries to the 
+Run the odml_config.m script that will add all necessary libraries to the 
 matlab java - classpath.
-
-In case you use an older version of Matlab that does not come with the jdom library 
-uncomment the marked lines in the odmlConfig script.
 
 
 Getting started
 -------------------------------------------------------------------------
-The tutorial.m file that is part of this package demonstrates some basic
+The odml_example.m file that is part of this package demonstrates some basic
 commands.
 
 
